# freeradical

./: .dockerignore  .env.mysql.example  .env.payment.sample  .env.postgres.example  .env.production.example  .env.production.template  .env.sample  .env.test  .gitignore  .release_notes_v0.2.0.md  API-DOCS.md  BENCHMARK.md  CHANGELOG.md  Cargo.toml  Cargo.toml.bak  Cargo.toml.redis  DEPLOYMENT.md  DEPLOYMENT_PROD.md  DEVELOPMENT-SUMMARY.md  DIESEL-UPGRADE-FINAL.md  DIESEL-UPGRADE-PROGRESS.md  DOCS_ORGANIZATION.md  Dockerfile  ITERATION-3-COMPLETE.md  ITERATION-4-PARTIAL.md  ITERATION-4-STATUS.md  ITERATION-5-COMPLETE.md  ITERATION-6-DEPLOYMENT.md  ITERATION-6-FINAL-COMPLETE.md  ITERATION-6-PROGRESS.md  ITERATION-7-SCOPE.md  ITERATION-PLAN.md  LICENSE  LICENSE-ENTERPRISE  LICENSE-MIT  MCP_INTEGRATION_GUIDE.txt  MONITORING.md  PERFORMANCE.md  PHASE-5-IMPLEMENTATION.md  PLANNING_v0.3.0.md  (+78 more)
.github/wiki/: Google-OAuth-Authentication.md
.github/workflows/: ci.yml  playwright.yml  publish-sdks.yml  test.example.yml  test.example.yml.disabled
admin/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
admin/src/: App.tsx  main.tsx
assets/: BENCHMARK.md  PERFORMANCE.md
cli/: Cargo.toml  README.md
cli/src/: main.rs
cli/src/commands/: build.rs  dev.rs  export.rs  import.rs  init.rs  migrate.rs  mod.rs
cli/templates/default/: .gitignore  config.toml
docs/: AI_AUTHORIZATION.md  AI_FEATURES.md  AI_MCP_SCOPING.md  CLOUD_SQL_PGVECTOR.md  CRM_VERIFICATION_FLOW.md  DOCS_ORGANIZATION.md  FEATURES_V2.6.md  MCP_IMPLEMENTATION_DECISION.md  MCP_RBAC.md  MCP_SERVER.md  NEXT_STEPS.md  README.md  README_V2.6.md  SWAGGER_INTEGRATION.md  ai-provider-config-examples.md  benchmarking.md  breadcrumb-implementation.md  databases.md  deployment.md  enable_oauth.md  https-setup.md  implementation_plan.md  iteration-2-enhancements.md  openapi.yaml  performance_benchmarks.md  user_guide.md  walkthrough.md
docs/architecture/: payment_architecture.md
docs/benchmarks/: BENCHMARKS-AND-TESTS.md  PERFORMANCE_v1.0.1.md  apache_bench_v1.0.3.md  database_optimization.md  wordpress_comparison.md
docs/core/: CORE_DEVELOPER_GUIDE.md
docs/iterations/: COMPLETE-FEATURE-SUMMARY.md  ITERATION-1-COMPLETE.md  ITERATION-2-COMPLETE.md  ITERATION-3-COMPLETE.md  ITERATION-4-COMPLETE.md  ITERATION-6-COMPLETE.md  ITERATION-6-COMPLETION-PLAN.md  ITERATION-6-HONEST-STATUS.md  ITERATION-6-INFRASTRUCTURE.md  ITERATION-7-COMPLETE.md
docs/migrations/: DIESEL-UPGRADE-FINAL-STATUS.md
docs/releases/: PUBLICATION_CHECKLIST_v1.0.1.md  RELEASE-NOTES-v1.0.1.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  Release-v1.0.1-Wiki.md  TESTING_SUMMARY_v0.3.0.md  v0.2.0-SUMMARY.md  v0.8.0-STATUS.md
docs/roadmaps/: FEATURE-GAP-ANALYSIS.md  ROADMAP-AUDIT.md  roadmap.md
docs/sdk/: CICD_CHECKLIST.md  CICD_SETUP.md  GITHUB_SECRETS.md  PUBLISHING_CHECKLIST.md  PUBLISHING_GUIDE.md  SDK_DEVELOPER_GUIDE.md  sdk_overview.md
docs/status/: CURRENT-STATUS.md  FINAL-STATUS.md  SUMMARY.md
docs/testing/: AI_INTEGRATION_TESTS.md  inventory_api_tests.md
docs/wiki/: Actix-Web-v4-Upgrade.md  HTTPS-Setup-Guide.md  LANDING_PAGE_EXAMPLE.md  MCP-Custom-Tools-Integration.md  SITE_HOSTING_GUIDE.md  database-selection-guide.md
migrations/: .force_rebuild
migrations/$(find migrations -name '*add_crm_performance*' -type d | head -1 | xargs basename)/: up.sql
migrations/2020-12-18-181841_create_pages/: up.sql
migrations/2024-12-30-create-pending-verifications/: down.sql  up.sql
migrations/2024-12-30-create-verification-settings/: down.sql  up.sql
migrations/2025-12-24-172046-0000_add_seo_fields/: down.sql  up.sql
migrations/2025-12-24-175525-0000_add_performance_indexes/: down.sql  up.sql
migrations/2025-12-24-184130-0000_add_seo_field_constraints/: up.sql
migrations/2025-12-24-190358-0000_add_article_metadata/: up.sql
migrations/2025-12-24-190528-0000_create_robots_config/: down.sql  up.sql
migrations/2025-12-24-192411-0000_add_composite_indexes/: up.sql
migrations/2025-12-24-192424-0000_create_analytics_tables/: down.sql  up.sql
migrations/2025-12-24-200000_add_users_id/: down.sql
migrations/2025-12-24-213753-0000_create_media_table/: down.sql  up.sql
migrations/2025-12-24-213814-0000_create_page_revisions/: down.sql  up.sql
migrations/2025-12-24-213822-0000_add_publishing_fields/: down.sql  up.sql
migrations/2025-12-24-234400_add_advanced_field_types/: up.sql
migrations/2025-12-24-234500_add_rbac_tables/: up.sql
migrations/2025-12-24-234600_add_search_indexes/: up.sql
migrations/2025-12-24-235900_add_relationships_and_webhooks/: down.sql  up.sql
migrations/2025-12-25-000000_add_i18n_support/: up.sql
migrations/2025-12-25-000001_add_enterprise_features/: down.sql  up.sql
migrations/2025-12-25-010000_add_2fa/: down.sql  up.sql
migrations/2025-12-25-020000_add_commerce/: down.sql  up.sql
migrations/2025-12-25-201200_add_inventory_management/: down.sql  up.sql
migrations/2025-12-25-230000_add_users_id/: up.sql
migrations/2025-12-26-000000_create_crm_tables/: down.sql  (+1 more)
mockups/: FreeRadical.dev design guide.md  freeradical.html  homepage content.md  homepage-content.md  socialmediakit.jsx  why.jsx
scripts/: README_pgvector.md  benchmark_databases.sh  convert_mysql_to_postgres.sh  copy_migrations_simple.sh  create_postgres_migrations.sh  deploy.sh  generate_sdks.sh  migrate.sh  publish-sdk.sh  run_postgres_migrations.sh  seed_local_data.sh  setup-pgvector-alpine.sh  setup-pgvector.sh  test_mysql.sh  test_postgres.sh  validate-cicd.sh
sdk/: SDK-COMPLETE.md
seeds/: run_seed.sh  seed_prabhatkr_data.sql
src/: api_docs.rs  main.rs  main.rs.admin  main.rs.bak4  schema.rs  schema.rs.backup  schema.rs.bak  schema.rs.new  schema_commerce.rs  schema_inventory_addition.rs  schema_new.rs  sql_types.rs  watch.rs
static/: admin-ai-config.html  admin-login.html  admin-portal.html  api.html  index.html  index.html.api  social.html  why.html
templates/: about.hbs  index.hbs
tests/: COMMERCE_TESTS.md  ai_provider_integration.rs.disabled  integration_tests.rs
(+411 files in other folders)
