[package]
name = "freeradical"
version = "1.0.1"
authors = ["spbills <spencebills0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web
actix-web = "3"
actix-files = "0.5.0"
actix-cors = "0.5.4"
actix-ratelimit = "0.3.1"
actix-multipart = "0.4"  # For file uploads

# encryption
jsonwebtoken = "7"
argon2 = "0.2"
rand_core = { version = "0.6", features = ["std"] }

# serialization
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.60"

# database
diesel = { version = "2.2", features = ["mysql", "chrono", "r2d2"] }
diesel_migrations = "2.2"
chrono = { version = "0.4", features = ["serde"] }

# templating
handlebars = {version = "3.5.2", features = ["dir_source"]}
notify = "4.0.16"

# utility
thiserror = "1.0.22"
log = "0.4.0"
env_logger = "0.8.4"
envy = "0.4"
dotenv = "*"
uuid = { version = "0.8", features = ["serde", "v4"] }
futures = "*"
futures-util = "0.3"  # For async file I/O
tokio = { version = "1", features = ["time"] }  # For async runtime
time = "0.2.23"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "aio"] }
deadpool-redis = "0.14"  # Connection pooling for Redis
sha2 = "0.10"  # Updated for compatibility with digest 0.10
flate2 = "1.0"  # For sitemap compression
image = "0.24"  # For image dimension extraction
infer = "0.15"  # For MIME type detection
tokio-cron-scheduler = "0.9"  # For scheduled publishing
once_cell = "1.19"  # For global static instances
regex = "1.10"  # For field validation patterns
reqwest = { version = "0.11", features = ["json"] }  # For webhook HTTP calls
async-graphql = "3.0"  # GraphQL server
hex = "0.4"  # For hex encoding HMAC signatures
hmac = "0.12"  # For HMAC-SHA256 signatures
urlencoding = "2.1"  # For OAuth URL encoding
liquid = "0.26"
pyo3 = "0.20"
async-trait = "0.1.89"
totp-rs = { version = "5.0", features = ["gen_secret", "qr"] }
base64 = "0.22.1"

[dev-dependencies]
actix-rt = "2.2.0"
