[package]
name = "freeradical"
version = "2.6.1"
authors = ["fastbuilder <team@fastbuilder.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web
actix-web = "4.12.1"
actix = "0.13"  # Actor framework for WebSocket MCP server
actix-web-actors = "4.3"  # WebSocket actors for MCP server
actix-files = "0.6"
actix-cors = "0.7"
actix-governor = "0.10.0"
actix-multipart = "0.7"  # For file uploads

# encryption
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
argon2 = "0.5"
password-hash = "0.5"
rand_core = { version = "0.6", features = ["std"] }

# serialization
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.60"

# database
diesel = { version = "2.1.0", features = ["postgres", "chrono", "r2d2", "numeric", "serde_json", "uuid"] }
diesel_migrations = "2.1.0"
diesel-derive-enum = { version = "2.1", features = ["postgres"] }
chrono = { version = "0.4", features = ["serde"] }

# templating
handlebars = {version = "6.3.2", features = ["dir_source"]}
notify = "4.0.16"

# utility
thiserror = "1.0.22"
log = "0.4.0"
env_logger = "0.8.4"
envy = "0.4"
dotenv = "*"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
rust_decimal = "1.36"
bigdecimal = { version = "0.4", features = ["serde"] }
futures = "*"
futures-util = "0.3"  # For async file I/O
tokio = { version = "1", features = ["time"] }  # For async runtime
time = "0.2.23"

# encryption
ring = "0.17"  # AES-256-GCM encryption
aes-gcm = "0.10"
base64 = "0.22.1" # Kept original version, as the instruction's version was older

# oauth & HTTP
reqwest = { version = "0.12.13", features = ["json"] }  # For OAuth and AI API calls
urlencoding = "2.1"

# redis
redis = { version = "0.32", features = ["tokio-comp", "connection-manager", "aio", "cluster-async"] }
deadpool-redis = "0.22"  # Connection pooling for Redis

# graphql
juniper = "0.16.1"
juniper_actix = "0.6.0"
async-graphql = "7.0.17"  # GraphQL server

# AI/MCP (v1.7.0)
tokio-tungstenite = "0.21"  # WebSocket client for MCP
async-openai = "0.18"  # OpenAI API client
# Note: anthropic-sdk and google-generativeai to be added when available
# For now, we'll use reqwest for direct API calls to Anthropic & Google

# pgvector
pgvector = { version = "0.4", features = ["diesel"] }  # PostgreSQL vector similarity search

sha2 = "0.10"  # Updated for compatibility with digest 0.10
flate2 = "1.0"  # For sitemap compression
image = "0.24"  # For image dimension extraction
infer = "0.15"  # For MIME type detection
tokio-cron-scheduler = "0.9"  # For scheduled publishing
once_cell = "1.19"  # For global static instances
regex = "1.10"  # For field validation patterns
hex = "0.4"  # For hex encoding HMAC signatures
hmac = "0.12"  # For HMAC-SHA256 signatures
liquid = "0.26"
# pyo3 = "0.20"  # Not currently used, commented out to avoid Docker build issues
async-trait = "0.1.89"
totp-rs = { version = "5.0", features = ["gen_secret", "qr"] }

# OpenAPI/Swagger Documentation
utoipa = { version = "4.2", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["actix-web"] }
utoipa-redoc = { version = "3.0", features = ["actix-web"] }

# Email
# Email
lettre = { version = "0.10", features = ["tokio1", "tokio1-native-tls", "builder"] }
aws-sdk-sesv2 = "1.50.0"
rand = "0.9.2"

[dependencies.aws-config]
version = "1.5.0"

[dependencies.aws-sdk-s3]
version = "1.50.0"

[dependencies.aws-types]
version = "1.3.3"




[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
