[package]
name = "freeradical-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.11", features = ["json", "blocking"] }
colored = "2.1"
dialoguer = "0.11"
indicatif = "0.17"
